CleanUp all files.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,15 +27,9 @@ dist.jar=${dist.dir}/IESmet.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jcommon-1.0.18.jar=lib/JCommon/jcommon-1.0.18.jar
-file.reference.jfreechart-1.0.14.jar=lib/JFreeChart/jfreechart-1.0.14.jar
-file.reference.RXTXcomm.jar=lib/RXTX/RXTXcomm.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.RXTXcomm.jar}:\
-    ${file.reference.jcommon-1.0.18.jar}:\
-    ${file.reference.jfreechart-1.0.14.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
