Añadida librería jdom para el tratamiento de XML

--- a/IESmet/nbproject/project.properties
+++ b/IESmet/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=IESmet
+application.vendor=Alberto
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,18 +25,23 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/IESmet.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.create-lab-commons-serial.jar=lib\\RXTX\\create-lab-commons-serial.jar
+file.reference.create-lab-commons-serial.jar=lib/RXTX/create-lab-commons-serial.jar
 file.reference.jcommon-1.0.18.jar=lib\\JCommon\\jcommon-1.0.18.jar
+file.reference.jdom-2.0.5.jar=lib/jdom-2.0.5.jar
+file.reference.jdom-2.0.5.zip=lib/jdom-2.0.5.zip
 file.reference.jfreechart-1.0.14.jar=lib\\JFreeChart\\jfreechart-1.0.14.jar
-file.reference.RXTXcomm.jar=lib\\RXTX\\RXTXcomm.jar
+file.reference.RXTXcomm.jar=lib/RXTX/RXTXcomm.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcommon-1.0.18.jar}:\
     ${file.reference.jfreechart-1.0.14.jar}:\
     ${file.reference.RXTXcomm.jar}:\
-    ${file.reference.create-lab-commons-serial.jar}
+    ${file.reference.create-lab-commons-serial.jar}:\
+    ${file.reference.jdom-2.0.5.zip}:\
+    ${file.reference.jdom-2.0.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
