--- a/IESmet/nbproject/project.properties
+++ b/IESmet/nbproject/project.properties
@@ -27,23 +27,21 @@ dist.jar=${dist.dir}/IESmet.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.create-lab-commons-serial.jar=lib/RXTX/create-lab-commons-serial.jar
-file.reference.jcommon-1.0.18.jar=lib\\JCommon\\jcommon-1.0.18.jar
-file.reference.jdom-2.0.5.jar=lib/jdom-2.0.5.jar
-file.reference.jdom-2.0.5.zip=lib/jdom-2.0.5.zip
-file.reference.jfreechart-1.0.14.jar=lib\\JFreeChart\\jfreechart-1.0.14.jar
+file.reference.jcommon-1.0.18.jar=lib/JCommon/jcommon-1.0.18.jar
+file.reference.jfreechart-1.0.14.jar=lib/JFreeChart/jfreechart-1.0.14.jar
 file.reference.RXTXcomm.jar=lib/RXTX/RXTXcomm.jar
+file.reference.stax2-api-3.1.1.jar=lib\\Woodstox\\stax2-api-3.1.1.jar
+file.reference.woodstox-core-lgpl-4.2.0.jar=lib\\Woodstox\\woodstox-core-lgpl-4.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.RXTXcomm.jar}:\
     ${file.reference.jcommon-1.0.18.jar}:\
     ${file.reference.jfreechart-1.0.14.jar}:\
-    ${file.reference.RXTXcomm.jar}:\
-    ${file.reference.create-lab-commons-serial.jar}:\
-    ${file.reference.jdom-2.0.5.zip}:\
-    ${file.reference.jdom-2.0.5.jar}
+    ${file.reference.woodstox-core-lgpl-4.2.0.jar}:\
+    ${file.reference.stax2-api-3.1.1.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=-Xlint
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
